// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`genExampleValue a arguments example for the operation student query should be generated 1`] = `
Object {
  "test": Object {
    "name": null,
  },
}
`;

exports[`genExampleValue a return data example for the operation student query should be generated 1`] = `
Array [
  Object {
    "books": Array [
      null,
    ],
    "name": null,
    "sex": null,
  },
]
`;

exports[`genGQLStr a gql string for student query should be generated 1`] = `
"query student($test: Test) {
  student(test: $test) {
    name
    sex
    books
  }
}"
`;

exports[`genGQLStrInGroup gql strings for group default should be generated 1`] = `
"# default 

query student($test: Test) {
  student(test: $test) {
    name
    sex
    books
  }
}
"
`;
